fix white space around section-content

--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ sections
 
 /* --- heading --- */
 .section-heading {
-	margin-bottom: 70px;
+	/*margin-bottom: 70px;*/
   margin-top: 100px;
 }
 
@@ -107,6 +107,10 @@ sections
 	background: #333;
 	margin-top: 80px;
 	margin-bottom: 20px;
+}
+
+.section-content {
+	margin-top: 30px;
 }
 
 /* =================
